--- a/index.html
+++ b/index.html
@@ -8,61 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    <div class="game">
+    <div class="game" id="app">
         <div class="game__title">
             <h2>Memory – Pair Game</h2>
+            <h3></h3>
         </div>
-
-        <div class="game-list">
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type2"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type2"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type3"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type3"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-
-            <div class="game-list__item">
-                <div class="game-list__card game-list__type1"></div>
-            </div>
-        </div>
-
     </div>
     <script src="./assets/js/app.js"></script>
 </body>
